crates/ox_content_docs/src/markdown/tests/snapshots/render_style_markdown_typedoc_emits_pure_per_symbol_pages.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== cli/functions/cli.md =====
# Function: cli()

Runs the CLI.

## Since

1.0.0

## Signature

```ts
export function cli(argv: string[]): void
```

## Parameters

- `argv` (`string[]`) - Arguments.

## Returns

`void` — Nothing.

## Throws

- `CliError` — When argument parsing fails.

## Examples

```ts
cli([])
```
===== cli/index.md =====
# cli

_2 symbols · 1 functions · 1 interfaces · 1 parameters · 1 members · 1 returns · 1 examples_

## Functions

- [cli](/api/cli/functions/cli.md) - Runs the CLI.

## Interfaces

- [Command](/api/cli/interfaces/Command.md) - A command.

===== cli/interfaces/Command.md =====
# Interface: Command

A command.

## Signature

```ts
export interface Command
```

## Methods

### run()

```ts
run(): void;
```

Runs it.

#### Throws

- `RunError` — When the command cannot run.
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 1 functions · 1 interfaces · 1 parameters · 1 members · 1 returns · 1 examples_

## Modules

- [cli](/api/cli/index.md)
