crates/ox_content_docs/src/markdown/tests/snapshots/render_style_markdown_typedoc_sections_are_sequential_headings.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== cli/functions/cli.md =====
# Function: cli()

Runs the CLI.

## Since

1.0.0

## Signature

```ts
export function cli(argv: string[]): void
```

[View source](https://github.com/x/y/blob/main/src/cli.ts#L1-L3)

## Parameters

- `argv` (`string[]`) - Arguments.

## Returns

`void` — Nothing.

## Throws

- `CliError` — When argument parsing fails.

## Examples

```ts
cli([])
```
===== cli/index.md =====
# cli

_2 symbols · 1 functions · 1 interfaces · 1 parameters · 1 members · 1 returns · 1 examples_

## Functions

- [cli](./functions/cli.md) - Runs the CLI.

## Interfaces

- [Command](./interfaces/Command.md) - A command.

===== cli/interfaces/Command.md =====
# Interface: Command

A command.

## Signature

```ts
export interface Command
```

[View source](https://github.com/x/y/blob/main/src/cli.ts#L5-L8)

## Methods

### run()

```ts
run(): void;
```

Runs it.

#### Throws

- `RunError` — When the command cannot run.
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 1 functions · 1 interfaces · 1 parameters · 1 members · 1 returns · 1 examples_

## Modules

- [cli](./cli/index.md)
