crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_dedupe_without_source_path_uses_first_module.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Command](./interfaces/Command.md) | A command. |

===== default/interfaces/Command.md =====
# Interface: Command

<div id="command" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>A command.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Command(): void</code></pre>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>interfaces</span>
</span>
</div>

## Modules

- [default](./default/index.md)
- [plugin](./plugin/index.md)
===== plugin/index.md =====
# plugin

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## References

### Command

Re-exports [Command](../default/interfaces/Command.md)
