crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_dedupes_cross_entrypoint_reexports_to_canonical_page.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== context/functions/createCommandContext.md =====
# Function: createCommandContext()

<div id="createcommandcontext" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Creates a command context.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function createCommandContext(): void</code></pre>
</div>
</div>
===== context/index.md =====
# context

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [createCommandContext](./functions/createCommandContext.md) | Creates a command context. |

===== default/functions/runDefault.md =====
# Function: runDefault()

<div id="rundefault" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Uses <a href="../../context/functions/createCommandContext.md">createCommandContext</a>.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function runDefault(): void</code></pre>
</div>
</div>
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [runDefault](./functions/runDefault.md) | Uses [createCommandContext](../context/functions/createCommandContext.md). |

## References

### createCommandContext

Re-exports [createCommandContext](../context/functions/createCommandContext.md)

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>3</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>4</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>4</strong>
  <span>functions</span>
</span>
</div>

## Modules

- [context](./context/index.md)
- [default](./default/index.md)
- [plugin](./plugin/index.md)
===== plugin/index.md =====
# plugin

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
</div>

## References

### createCommandContext

Re-exports [createCommandContext](../context/functions/createCommandContext.md)
