crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_dts_overloads_without_implementation_render_all.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/merge.md =====
# Function: merge()

## Call Signature

```ts
export function merge(a: A): A
```

Merge one source.

## Call Signature

```ts
export function merge(a: A, b: B): A & B
```

Merge two sources.
===== default/index.md =====
# default

_2 symbols · 2 functions_

## Functions

- [merge](./functions/merge.md) - Merge one source.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 2 functions_

## Modules

- [default](./default/index.md)
