crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_enum_member_table_drops_kind.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/enumerations/Level.md =====
# Enumeration: Level

Level.

## Signature

```ts
export function Level(): void
```

## Enum Members

| Name | Type | Description |
| --- | --- | --- |
| `Low` | `unknown` |  |
===== combinators/index.md =====
# combinators

_1 symbols · 1 enumerations · 1 members_

## Enumerations

- [Level](./enumerations/Level.md) - Level.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 enumerations · 1 members_

## Modules

- [combinators](./combinators/index.md)
